--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -26,11 +26,11 @@ time, mark, audio, video {
 /* Base text styles */
 
 body {
-  padding:10px 50px 0 0;
+  /*padding:10px 10px 0 0;*/
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
-	color: #232323;
-	background-color: #FBFAF7;
+	color: #000;
+	background-color: #89f;
 	margin: 0;
 	line-height: 1.8em;
 	-webkit-font-smoothing: antialiased;
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, ul, ol, table, dl {
-  margin:0 0 22px;
+  margin:0 0 12px;
 }
 
 h1, h2, h3 {
@@ -64,6 +64,7 @@ h1 {
 
 h2 {
 	font-size: 24px;
+  text-align: center;
 }
 
 h3 {
@@ -76,8 +77,8 @@ h4, h5, h6 {
 }
 
 a {
-  color:#C30000;
-  font-weight:200;
+  color:#008;
+  font-weight:600;
   text-decoration:none;
 }
 
@@ -145,10 +146,7 @@ hr {
 img {
   position: relative;
   margin: 0 auto;
-  max-width: 650px;
   padding: 5px;
-  margin: 10px 0 32px 0;
-  border: 1px solid #ccc;
 }
 
 p img {
@@ -202,38 +200,32 @@ th {
 
 td {
   padding: 10px;
-	background: #ccc;
+	background: #e3e3e3;
  }
 
 
 /* Wrapper */
 .wrapper {
-  width:960px;
+  width:100%;
 }
 
 
 /* Header */
 
 header {
-	background-color: #171717;
+	background-color: #171757;
 	color: #FDFDFB;
-  width:170px;
-  float:left;
-  position:fixed;
+  width:100%;
 	border: 1px solid #000;
-	-webkit-border-top-right-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	-moz-border-radius-bottomright: 4px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
-	padding: 34px 25px 22px 50px;
-	margin: 30px 25px 0 0;
+	padding: 14px 0px 20px 0px;
+	margin: 0px auto;
 	-webkit-font-smoothing: antialiased;
 }
 
 p.header {
-	font-size: 16px;
+	clear:both;
+  font-size: 16px;
+  padding:0px 40px;
 }
 
 h1.header {
@@ -243,6 +235,7 @@ h1.header {
 	line-height: 1.3em;
 	border-bottom: none;
 	margin-top: 0;
+  padding:0px 40px;
 }
 
 
@@ -260,17 +253,18 @@ a.name {
 
 header ul {
   list-style:none;
-  padding:0;
+  padding:0px 40px;
 }
 
 header li {
 	list-style-type: none;
-  width:132px;
+  width:170px;
   height:15px;
 	margin-bottom: 12px;
-	line-height: 1em;
+	margin-right: 4px; line-height: 1em;
 	padding: 6px 6px 6px 7px;
-
+  float:left;
+  
 	background: #AF0011;
 	background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
@@ -319,18 +313,23 @@ a.buttons:hover {
 /* Section - for main page content */
 
 section {
-  width:650px;
-  float:right;
   padding-bottom:50px;
 }
 
+section p {
+  
+	color:#000;
+	background-color:#cfdfff;  
+	clear:both; 
+	margin:1em 5em; 
+	padding:2px 2px 2px 6px;	
+  border:1px solid white;
+
+}
 
 /* Footer */
 
 footer {
-  width:170px;
-  float:left;
-  position:fixed;
   bottom:10px;
 	padding-left: 50px;
 }
@@ -368,9 +367,7 @@ footer {
   }
 
   header ul {
-    position:absolute;
-    right:130px;
-    top:84px;
+    
   }
 }
 
