test page arrangement and wording

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -216,7 +216,7 @@ header {
 	background-color: #171757;
 	color: #FDFDFB;
   width:100%;
-	border: 1px solid #000;
+	border: 7px solid #02b;
 	padding: 14px 0px 20px 0px;
 	margin: 0px auto;
 	-webkit-font-smoothing: antialiased;
@@ -257,27 +257,30 @@ header ul {
 }
 
 header li {
-	list-style-type: none;
+  position:absolute;
+  top:2em;
+  right:1em;
+  list-style-type: none;
   width:170px;
   height:15px;
-	margin-bottom: 12px;
-	margin-right: 4px; line-height: 1em;
-	padding: 6px 6px 6px 7px;
-  float:left;
+  margin-bottom: 12px;
+  margin-right: 4px; line-height: 1em;
+  padding: 6px 6px 6px 7px;
   
-	background: #AF0011;
-	background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
+  
+  background: #AF0011;
+  background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
   background: -webkit-linear-gradient(top, #AF0011 0%,#820011 100%);
   background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
   background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
   background: linear-gradient(top, #AF0011 0%,#820011 100%);
 
-	border-radius:4px;
+  border-radius:4px;
   border:1px solid #0D0D0D;
 
-	-webkit-box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
-	box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
+  -webkit-box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
+  box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
 
 }
 
